exports[`Component > Collapsible collapses correctly 1`] = `
<Collapsible
  defaultExpanded={true}
  title="collapse">
  <div>
    <div
      aria-level={3}
      role="heading">
      <div
        aria-expanded={false}
        onClick={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
            "paddingBottom": "12px",
          }
        }>
        <Icon
          type="chevron-right">
          <i
            className="fa fa-chevron-right fa-fw " />
        </Icon>
        <strong>
          collapse
        </strong>
      </div>
    </div>
  </div>
</Collapsible>
`;

exports[`Component > Collapsible expands correctly 1`] = `
<Collapsible
  defaultExpanded={false}
  title="collapse">
  <div>
    <div
      aria-level={3}
      role="heading">
      <div
        aria-expanded={true}
        onClick={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
            "paddingBottom": "12px",
          }
        }>
        <Icon
          type="chevron-down">
          <i
            className="fa fa-chevron-down fa-fw " />
        </Icon>
        <strong>
          collapse
        </strong>
      </div>
    </div>
    <div>
      Lorem ipsum dolor sit amet.
    </div>
  </div>
</Collapsible>
`;

exports[`Component > Collapsible renders correctly 1`] = `
<Collapsible
  defaultExpanded={false}
  title="collapse">
  <div>
    <div
      aria-level={3}
      role="heading">
      <div
        aria-expanded={false}
        onClick={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
            "paddingBottom": "12px",
          }
        }>
        <Icon
          type="chevron-right">
          <i
            className="fa fa-chevron-right fa-fw " />
        </Icon>
        <strong>
          collapse
        </strong>
      </div>
    </div>
  </div>
</Collapsible>
`;
